cabal-version:      2.4
name:               pipesgame
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yaroslav Kivaev
maintainer:         y.kivaev@tinkoff.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
      Lib
      Objects
      RenderingOfUniverse
      SimulationModule
      TimeModule
      UsefulFunctions
  hs-source-dirs:
      src
  build-depends:
    base >=4.7 && <5
    , gloss >=1.13
    , random
  default-language: Haskell2010

executable pipesgame
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      pipesgame
    , base >=4.7 && <5
    , gloss >=1.13
    , random
  default-language: Haskell2010